# WeatherApp

./: .gitignore  CMakeLists.txt  README.md  app.cpp  app.h  app.ui  assets.qrc  main.cpp
config/: config.xml.save
src/: app.h  app.ui  config.cpp  config.h  logic.h  main.cpp  place.cpp  place.h  ui_app.h  weather.cpp  weather.h  weatherexception.cpp  weatherexception.h  weatherinfo.cpp  weatherinfo.h  weatherinputdialog.cpp  weatherinputdialog.h  weatherinputdialog.ui
style/: stylesheet.qss
uml/: class_diagram.drawio  precedence_diagram.drawio  sequence_diagram.drawio
